kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: "2048-deployment"
  namespace: "2048"

spec:
  replicas: 2

  selector:
    matchLabels:
      app: "2048"

  template:
    metadata:
      labels:
        app: "2048"

    spec:
      containers:
        - name: "2048"
          image: "435059220418.dkr.ecr.eu-west-2.amazonaws.com/2048-eks-repo:latest"

          ports:
            - containerPort: 80

          readinessProbe:
            httpGet:
              path: /
              port: 80

          livenessProbe:
            httpGet:
              path: /
              port: 80

          startupProbe:
            httpGet:
              path: /
              port: 80

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"

            limits:
              cpu: "200m"
              memory: "128Mi"
