kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: "2048-cluster-ip-service"
  namespace: "2048"

spec:
  type: ClusterIP

  selector:
    app: "2048"

  ports:
    - port: 80
      targetPort: 80
